<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResearchingApp</string>
    <string name="presentation_text">Welcome to Researching best App!</string>
    <string name="action_settings">Settings</string>
    <string name="select_option_text">Please select an option: </string>
    <string name="user_button_text">User</string>
    <string name="administrator_button_text">Administrator</string>
    <string name="introduce_pin_text">Introduce the pin to start the questioner</string>
    <string name="pin_text">here the pin</string>
    <string name="start_button_text">Start</string>
    <string name="pin_activity_name">IntroducePin</string>
    <string name="pass_activity_name">IntroducePass</string>
    <string name="introduce_userpass_text">Please enter username and password: </string>
    <string name="enter_button_text">Enter</string>
    <string name="password_edit_text">here password</string>
    <string name="user_edit_text">here user</string>
    <string name="results_button_text">Results</string>
    <string name="create_button_text">Create a questioner</string>
    <string name="admin_activity_name">AdministratorOptions</string>
    <string name="check_questionar">Check Questionar</string>
    <string name="create_questionar">Create Questionar</string>
    <string name="edit_questionar">Edit Questionar</string>
    <string name="delete_questionar">Delete Questionar</string>



</resources>
