<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Main">

    <TextView
        android:text="@string/presentation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_option_text"
        android:textSize="20dp" />


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_button_text"
        android:onClick="user_option"
        />

    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/administrator_button_text"
       android:onClick="admin_option"
        />


    </LinearLayout>


</LinearLayout>
