<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/edit_questionar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_questionar"
                />
            <Button
                android:id="@+id/create_questionar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_questionar"
                />

            <Button
                android:id="@+id/delete_questionar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_questionar"
                />
        </LinearLayout>
    </LinearLayout>
